alignment  fix

--- a/app/styles/partials/utils.scss
+++ b/app/styles/partials/utils.scss
@@ -73,16 +73,16 @@
   padding-right: .25rem !important;
 }
 
-.pr-2 {
-  padding-right: .5rem !important;
-}
-
 .pb-4 {
   padding-bottom: 1rem !important;
 }
 
 .pl-2 {
   padding-left: .5rem !important;
+}
+
+.pl-4 {
+  padding-left: 1rem !important;
 }
 
 .mb-0 {
@@ -147,6 +147,10 @@
 
 .ml--4 {
   margin-left: -1rem !important;
+}
+
+.mr-1 {
+  margin-right: .25rem !important;
 }
 
 .mr-2 {
